# DataScienceMaterial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devcontainer.json  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
DataEngineering/Task1/: expected_output.json  input.json  main.py
DataEngineering/Task2/: Problem.txt
DataEngineering/Task3/: 11841 - Python Coding Exercise.txt  ProblemStatement.md  Solution1.py  Solution2.py  Solution3.py  weather.db
DataEngineering/Task4/: Problem.txt
DataEngineering/Task5/: a_problem.md  a_solution.py  b_problem.md  b_solution.py
DataEngineering/Task6/: a_problem_db_design.md  a_solution_db_design.sql  b_consume_RESTAPI.py
DataEngineering/Task7/: input_file_01.xlsx  input_file_02.xlsx  output_file.xlsx  solution.ipynb  template.xlsx
DataScienceMaterial/: blogs_articles.md
DataScienceMaterial/Miscellaneous/: Elasticsearch-fetch_recipes.py  file_size_linear_regression.py  project_1.txt  sql_db_creation.py  twitter_analyses.ipynb  waste.py
DataScienceMaterial/a_Data_Mining/data_validation/: TODO
DataScienceMaterial/a_Data_Mining/twitter/: a_example.py  b_example.py
DataScienceMaterial/b_Data_Visualization/04_wordcloud/: a_simple.py  b_read_pdf_resume.py  c_read_docx_resume.py
DataScienceMaterial/c_Data_Processing/00_statistics/: 00_statistics.ipynb
DataScienceMaterial/c_Data_Processing/01_numpy/: numpy_examples.py  numpy_module.ipynb  numpydemo.py  scipywords.py
DataScienceMaterial/c_Data_Processing/04_nltk/: NLTK_examples.ipynb  text_mining.ipynb  textblob_module.py
DataScienceMaterial/c_Data_Processing/06_spacy_module/: a_spacy.py  spacy_module.ipynb
(+46 files in other folders)
